# simple-fastapi-blog

./: .envExample  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  pyproject.toml
src/: .gitignore  config.py
src/business/blog/dto/: __init__.py  post.py
src/business/blog/usecases/: __init__.py  post.py  user.py
src/business/dto/: __init__.py  user.py
src/business/user/: usecases.py
src/dal/db/: main.py  uow.py
src/dal/db/migrations/: env.py
src/dal/db/models/: __init__.py  post.py  user.py
src/dal/db/repositories/: __init__.py  base.py  post.py  user.py
src/domain/blog/dto/: __init__.py
src/domain/blog/exceptions/: __init__.py  post.py  user.py
src/domain/blog/interfaces/: __init__.py  post.py  user.py
src/domain/blog/usecases/: __init__.py  post.py  user.py
src/domain/common/usecases/: base.py
src/infrastructure/admin/: __init__.py
src/infrastructure/admin/models/: post.py  user.py
src/infrastructure/db/: main.py  uow.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/models/: post.py  user.py
src/infrastructure/db/repositories/: __init__.py  base.py  post.py  user.py
src/presentation/admin/: main.py
src/presentation/api/: main.py
src/presentation/api/controllers/: __init__.py  blog.py  post.py  user.py
src/presentation/api/dependency_injection/: __init__.py
tests/: conftest.py
tests/models/user/: conftest.py
tests/test_api/: conftest.py  test_post.py  test_user.py
tests/test_api/user/: test_user.py
(+24 files in other folders)
